// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalDataResourcePercentage displays resources available when setting enabled 1`] = `
<Progress
  color="green"
  label={
    <div
      className="label"
    >
      10.000
      %
       
      <Responsive
        as="span"
        getWidth={[Function]}
        minWidth={800}
      />
    </div>
  }
  percent={10}
  size="large"
  style={
    Object {
      "margin": 10,
    }
  }
/>
`;

exports[`GlobalDataResourcePercentage renders correctly 1`] = `
<Progress
  color="green"
  label={
    <div
      className="label"
    >
      90.000
      %
       
      <Responsive
        as="span"
        getWidth={[Function]}
        minWidth={800}
      />
    </div>
  }
  percent={90}
  size="large"
  style={
    Object {
      "margin": 10,
    }
  }
/>
`;
